getting buttons back

--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,10 @@
             <p>Or use the buttons below</p>
         </div>
 
-        <!-- <div class="swipe-buttons">
+        <div class="swipe-buttons">
             <button class="swipe-btn" id="skipBtn">Skip</button>
             <button class="swipe-btn" id="saveBtn">Save</button>
-        </button> -->
+        </button>
     </div>
     <script src="js/news.js"></script>
 </body>
