--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 
         <div class="swipe-instructions">
             <p>Swipe left to skip • Swipe right to save</p>
-            <!-- <p>Or use the buttons below</p> -->
+            <p>Or use the buttons below</p>
         </div>
 
         <div class="swipe-buttons">
